--- a/src/Resources/views/applications/edit.html.twig
+++ b/src/Resources/views/applications/edit.html.twig
@@ -68,6 +68,7 @@
         </div>
     </div>
 
+    {% if application %}
     <div class="row">
         <div class="col s12">
             <div class="card">
@@ -116,6 +117,7 @@
                 </div>
             </div>
         </div>
+    {% endif %}
     </div>
 {% endblock %}
 
