--- a/src/Resources/views/notifications/segments/index.html.twig
+++ b/src/Resources/views/notifications/segments/index.html.twig
@@ -35,7 +35,7 @@
                                         {{ json_translator.getTranslation(segment.name) }}
                                     </a>
                                 </td>
-                                <td>{{ segment.device_count }}</td>
+                                <td>{{ segment.deviceCount }}</td>
                             </tr>
                         {% endfor %}
                         </tbody>
