--- a/src/Resources/views/components/collections/entries/form/text.html.twig
+++ b/src/Resources/views/components/collections/entries/form/text.html.twig
@@ -1,4 +1,7 @@
-{% if property.translatable == false %}
+{% if entry == null %}
+    {% set propertyValue = property.config.defaultValue %}
+
+{% elseif property.translatable == false %}
     {% set propertyValue = attribute(entry.data, property.identifier) %}
 
 {% elseif attribute(attribute(entry.data, property.identifier), language) is defined %}
@@ -12,6 +15,7 @@
 <div class="row">
     <div class="col s12">
         {% set label = property.config.label is defined and property.config.label != '' ? property.config.label : property.name %}
+        {% set language = language ?? '' %}
 
         <label for="{{ language ~ ':' ~ property.identifier }}" {% if property.required == true %}class="required"{% endif %}>{{ label }}</label>
         <input type="text"
