--- a/src/Resources/views/components/collections/entries/form/htmlText.html.twig
+++ b/src/Resources/views/components/collections/entries/form/htmlText.html.twig
@@ -1,4 +1,7 @@
-{% if property.translatable == false %}
+{% if entry == null %}
+    {% set propertyValue = property.config.defaultValue %}
+
+{% elseif property.translatable == false %}
     {% set propertyValue = attribute(entry.data, property.identifier) %}
 
 {% elseif attribute(attribute(entry.data, property.identifier), language) is defined %}
@@ -11,14 +14,14 @@
 
 <div class="row">
     <div class="col s12">
-        <label for="{{ language ~ ':' ~ property.identifier }}" {% if property.required == true %}class="required"{% endif %}>{{ property.name }}</label>
+        <label for="{{ language|default('') ~ ':' ~ property.identifier }}" {% if property.required == true %}class="required"{% endif %}>{{ property.name }}</label>
 
         {% set class = property.type.config.defaultValue.class is defined ? property.type.config.defaultValue.class : '' %}
 
         {% if 'codeflask' in class and is_granted_minimal(property.editableForRole) %}
-            <div class="{{ class }}" data-name="{{ language ~ ':' ~ property.identifier }}" data-language="html">{{ propertyValue is defined ? propertyValue : property.config.defaultValue }}</div>
+            <div class="{{ class }}" data-name="{{ language|default('') ~ ':' ~ property.identifier }}" data-language="html">{{ propertyValue is defined ? propertyValue : property.config.defaultValue }}</div>
         {% else %}
-            <textarea name="{{ language ~ ':' ~ property.identifier }}"
+            <textarea name="{{ language|default('') ~ ':' ~ property.identifier }}"
                       class="materialize-textarea {{ class }}" id="{{ property.name }}"
                       {% if not is_granted_minimal(property.editableForRole) %}readonly="readonly"{% endif %}>{{ propertyValue }}</textarea>
         {% endif %}
