--- a/src/Resources/public/src/Resources/public/css/codeflask.css
+++ b/src/Resources/public/src/Resources/public/css/codeflask.css
@@ -1,3 +1,335 @@
-code[class*=language-],pre[class*=language-]{word-wrap:normal;background:none;color:#000;font-family:Consolas,Monaco,Andale Mono,Ubuntu Mono,monospace;-webkit-hyphens:none;-ms-hyphens:none;hyphens:none;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;text-align:left;text-shadow:0 1px #fff;white-space:pre;word-break:normal;word-spacing:normal}code[class*=language-]::-moz-selection,code[class*=language-] ::-moz-selection,pre[class*=language-]::-moz-selection,pre[class*=language-] ::-moz-selection{background:#b3d4fc;text-shadow:none}code[class*=language-]::selection,code[class*=language-] ::selection,pre[class*=language-]::selection,pre[class*=language-] ::selection{background:#b3d4fc;text-shadow:none}@media print{code[class*=language-],pre[class*=language-]{text-shadow:none}}pre[class*=language-]{margin:.5em 0;overflow:auto;padding:1em}:not(pre)>code[class*=language-],pre[class*=language-]{background:#f5f2f0}:not(pre)>code[class*=language-]{border-radius:.3em;padding:.1em;white-space:normal}.token.cdata,.token.comment,.token.doctype,.token.prolog{color:#708090}.token.punctuation{color:#999}.namespace{opacity:.7}.token.boolean,.token.constant,.token.deleted,.token.number,.token.property,.token.symbol,.token.tag{color:#905}.token.attr-name,.token.builtin,.token.char,.token.inserted,.token.selector,.token.string{color:#690}.language-css .token.string,.style .token.string,.token.entity,.token.operator,.token.url{background:hsla(0,0%,100%,.5);color:#a67f59}.token.atrule,.token.attr-value,.token.keyword{color:#07a}.token.class-name,.token.function{color:#dd4a68}.token.important,.token.regex,.token.variable{color:#e90}.token.bold,.token.important{font-weight:700}.token.italic{font-style:italic}.token.entity{cursor:help}
-.CodeFlask{overflow:hidden;position:relative}.CodeFlask__pre,.CodeFlask__textarea,code[class*=language-],pre[class*=language-]{word-wrap:break-word;background:transparent;border:none;box-sizing:border-box;font-family:Consolas,Monaco,Andale Mono,Ubuntu Mono,monospace;font-size:13px;left:0;line-height:1.5em;padding:1rem;position:absolute;top:0;white-space:pre-wrap!important;width:100%}.CodeFlask__textarea{-webkit-overflow-scrolling:touch;-webkit-text-fill-color:transparent;background:transparent;border:none;color:#000;height:100%;margin:0;opacity:.4;outline:none;resize:none;-moz-tab-size:4;-o-tab-size:4;tab-size:4;z-index:1}.CodeFlask__pre{background:transparent!important;margin:0;margin:0!important;min-height:100%;overflow-y:auto;pointer-events:none;z-index:2}.CodeFlask__code{color:inherit;display:block;font-family:inherit;font-size:inherit}.CodeFlask__is-code{white-space:pre}.CodeFlask__textarea_line-numbers{margin-left:3.8em;padding-left:0!important;width:calc(100% - 3.8em)}.CodeFlask__pre_line-numbers{padding-left:3.8em!important}.CodeFlask__code_line-numbers{padding:0!important}
-.html-preview{margin:22px 0 0;min-height:400px;overflow-y:auto;position:relative}.html-preview .browser{border:3px solid #f1f1f1;min-height:400px}.html-preview .browser,.html-preview .toolbar{border-top-left-radius:4px;border-top-right-radius:4px;position:relative}.html-preview .toolbar{background:#f1f1f1;padding:10px}.html-preview .toolbar .column{float:left;position:relative}.html-preview .toolbar .column .dot{background-color:#bbb;border-radius:50%;display:inline-block;height:12px;margin-top:4px;width:12px}.html-preview .toolbar .column .dot:first-child{background-color:#ed594a}.html-preview .toolbar .column .dot:nth-child(2){background-color:#fdd800}.html-preview .toolbar .column .dot:last-child{background-color:#5ac05a}.html-preview .toolbar .left{width:55px}.html-preview .toolbar .right{width:25px}.html-preview .toolbar .right>div{float:right}.html-preview .toolbar .right>div .bar{background-color:#aaa;display:block;height:3px;margin:3px 0;width:17px}.html-preview .toolbar .middle{width:calc(100% - 80px)}.html-preview .toolbar .middle input[type=text]{background-color:#fff;border:none;border-radius:3px;color:#666;height:25px;margin-top:-8px;padding:5px;width:100%}.html-preview .toolbar:after{clear:both;content:"";display:table}.html-preview .content{min-height:355px;overflow-y:auto;position:relative}.html-preview .content iframe{border:0;display:block;min-height:355px;width:100%}div.code-mirror,div.codeflask{background-color:#f7f9fa;border:1px solid #dae3e7;border-radius:5px;min-height:400px}
+/* PrismJS 1.12.2
+http://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript */
+/**
+ * prism.js default theme for JavaScript, CSS and HTML
+ * Based on dabblet (http://dabblet.com)
+ * @author Lea Verou
+ */
+
+code[class*="language-"],
+pre[class*="language-"] {
+    color: black;
+    background: none;
+    text-shadow: 0 1px white;
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.5;
+
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+
+    -webkit-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
+}
+
+pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
+    text-shadow: none;
+    background: #b3d4fc;
+}
+
+pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection, code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
+    text-shadow: none;
+    background: #b3d4fc;
+}
+
+pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
+code[class*="language-"]::selection, code[class*="language-"] ::selection {
+    text-shadow: none;
+    background: #b3d4fc;
+}
+
+@media print {
+    code[class*="language-"],
+    pre[class*="language-"] {
+        text-shadow: none;
+    }
+}
+
+/* Code blocks */
+pre[class*="language-"] {
+    padding: 1em;
+    margin: .5em 0;
+    overflow: auto;
+}
+
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+    background: #f5f2f0;
+}
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+    padding: .1em;
+    border-radius: .3em;
+    white-space: normal;
+}
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+    color: slategray;
+}
+
+.token.punctuation {
+    color: #999;
+}
+
+.namespace {
+    opacity: .7;
+}
+
+.token.property,
+.token.tag,
+.token.boolean,
+.token.number,
+.token.constant,
+.token.symbol,
+.token.deleted {
+    color: #905;
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+    color: #690;
+}
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string {
+    color: #a67f59;
+    background: hsla(0, 0%, 100%, .5);
+}
+
+.token.atrule,
+.token.attr-value,
+.token.keyword {
+    color: #07a;
+}
+
+.token.function,
+.token.class-name {
+    color: #DD4A68;
+}
+
+.token.regex,
+.token.important,
+.token.variable {
+    color: #e90;
+}
+
+.token.important,
+.token.bold {
+    font-weight: bold;
+}
+
+.token.italic {
+    font-style: italic;
+}
+
+.token.entity {
+    cursor: help;
+}
+
+
+.CodeFlask{
+    position:relative;
+    overflow:hidden;
+}
+
+.CodeFlask__textarea,
+.CodeFlask__pre, 
+code[class*="language-"], 
+pre[class*="language-"]{
+    box-sizing:border-box;
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    padding:1rem;
+    border:none;
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-size:13px;
+    background:transparent;
+    white-space:pre-wrap !important;
+    line-height:1.5em;
+    word-wrap: break-word;
+}
+
+.CodeFlask__textarea{
+    border:none;
+    background:transparent;
+    outline:none;
+    resize:none;
+    opacity:0.4;
+    color:#000;
+    margin:0;
+    z-index:1;
+    height:100%;
+    -webkit-overflow-scrolling: touch;
+    -webkit-text-fill-color: transparent;
+    -moz-tab-size: 4;
+      -o-tab-size: 4;
+         tab-size: 4;
+}
+
+.CodeFlask__pre{
+    z-index:2;
+    pointer-events:none;
+    overflow-y:auto;
+    margin:0;
+    min-height:100%;
+    margin:0 !important;
+    background:transparent !important;
+}
+
+.CodeFlask__code{
+    font-size:inherit;
+    font-family:inherit;
+    color:inherit;
+    display:block;
+}
+
+.CodeFlask__is-code {
+    white-space: pre;
+}
+
+.CodeFlask__textarea_line-numbers {
+    width: calc(100% - 3.8em);
+    margin-left: 3.8em;
+    padding-left: 0px !important;
+}
+
+.CodeFlask__pre_line-numbers {
+    padding-left: 3.8em !important;
+}
+
+.CodeFlask__code_line-numbers {
+    padding: 0 !important;
+}
+
+.html-preview {
+  margin: 22px 0 0 0;
+  min-height: 400px;
+  overflow-y: auto;
+  position: relative;
+}
+
+.html-preview .browser {
+  border: 3px solid #f1f1f1;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  min-height: 400px;
+  position: relative;
+}
+
+.html-preview .toolbar {
+  padding: 10px;
+  background: #f1f1f1;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  position: relative;
+}
+
+.html-preview .toolbar .column {
+  float: left;
+  position: relative;
+}
+
+.html-preview .toolbar .column .dot {
+  margin-top: 4px;
+  height: 12px;
+  width: 12px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.html-preview .toolbar .column .dot:first-child {
+  background-color: #ED594A;
+}
+
+.html-preview .toolbar .column .dot:nth-child(2) {
+  background-color: #FDD800;
+}
+
+.html-preview .toolbar .column .dot:last-child {
+  background-color: #5AC05A;
+}
+
+.html-preview .toolbar .left {
+  width: 55px;
+}
+
+.html-preview .toolbar .right {
+  width: 25px;
+}
+
+.html-preview .toolbar .right > div {
+  float: right;
+}
+
+.html-preview .toolbar .right > div .bar {
+  width: 17px;
+  height: 3px;
+  background-color: #aaa;
+  margin: 3px 0;
+  display: block;
+}
+
+.html-preview .toolbar .middle {
+  width: calc(100% - 80px);
+}
+
+.html-preview .toolbar .middle input[type=text] {
+  width: 100%;
+  border-radius: 3px;
+  border: none;
+  background-color: white;
+  margin-top: -8px;
+  height: 25px;
+  color: #666;
+  padding: 5px;
+}
+
+.html-preview .toolbar:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.html-preview .content {
+  min-height: 355px;
+  overflow-y: auto;
+  position: relative;
+}
+
+.html-preview .content iframe {
+  width: 100%;
+  min-height: 355px;
+  border: 0;
+  display: block;
+}
+
+div.code-mirror,
+div.codeflask {
+  min-height: 400px;
+  border: 1px solid #dae3e7;
+  border-radius: 5px;
+  background-color: #f7f9fa;
+}
+
+
